@@ -4,6 +4,7 @@ from django.conf import settings
 from django.shortcuts import render
 from django.template.loader import render_to_string
 
+from wagtail.wagtailadmin.navigation import get_explorable_root_page
 from wagtail.wagtailadmin.site_summary import SiteSummaryPanel
 from wagtail.wagtailcore import hooks
 from wagtail.wagtailcore.models import Page, PageRevision, UserPagePermissionsProxy
@@ -82,8 +83,20 @@ def home(request):
     for fn in hooks.get_hooks('construct_homepage_panels'):
         fn(request, panels)
 
+    root_page = get_explorable_root_page(request.user)
+    if root_page:
+        root_site = root_page.get_site()
+    else:
+        root_site = None
+
+    real_site_name = None
+    if root_site:
+        real_site_name = root_site.site_name if root_site.site_name else root_site.hostname
+
     return render(request, "wagtailadmin/home.html", {
-        'site_name': settings.WAGTAIL_SITE_NAME,
+        'root_page': root_page,
+        'root_site': root_site,
+        'site_name': real_site_name if real_site_name else settings.WAGTAIL_SITE_NAME,
         'panels': sorted(panels, key=lambda p: p.order),
         'user': request.user
     })
